--- a/galleria/src/main/resources/messages/messages.properties
+++ b/galleria/src/main/resources/messages/messages.properties
@@ -1,5 +1,5 @@
-label.firstName=First name: 
-label.lastName=Surname: 
+label.username=Username: 
+label.password=Password: 
 label.age=Age: 
 label.mandatory=Mandatory field
 label.number=Must be a number
