--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -4,3 +4,7 @@ label.anno=Anno:
 label.mandatory=Campo obbligatorio
 label.number=Deve essere un numero
 label.invalid.user=nome utente o password errati
+label.username=Username:
+label.password=Password:
+label.cognome=Cognome;
+label.email=email;
