--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -8,3 +8,7 @@ label.username=Username:
 label.password=Password:
 label.cognome=Cognome;
 label.email=email;
+label.nazionalita=Nazionalità:
+label.annoNascita=Anno di nascita:
+label.annoMorte=Anno di morte:
+label.date=Formato data non valido
