Finito inserisci ed elimina autore, problemi sul mostradati

--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -8,7 +8,7 @@ label.username=Username:
 label.password=Password:
 label.cognome=Cognome;
 label.email=email;
-label.nazionalita=Nazionalità:
-label.annoNascita=Anno di nascita:
-label.annoMorte=Anno di morte:
+label.nazionalita=Nazionalita':
+label.dataNascita=Anno di nascita:
+label.dataMorte=Anno di morte:
 label.date=Formato data non valido
