Sistemata la form dell'inserimento di un autore.

--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -6,7 +6,7 @@ label.number=Deve essere un numero
 label.invalid.user=nome utente o password errati
 label.username=Username:
 label.password=Password:
-label.cognome=Cognome;
+label.cognome=Cognome:
 label.email=email;
 label.nazionalita=Nazionalita':
 label.dataNascita=Anno di nascita:
