Quasi finita pagine opere, manca popup per descrizioni e immagini.

--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -12,3 +12,8 @@ label.nazionalita=Nazionalita':
 label.dataNascita=Anno di nascita:
 label.dataMorte=Anno di morte:
 label.date=Formato data non valido
+label.lunghezza=Lunghezza:
+label.altezza=Altezza:
+label.immagine=URL Dell'immagine:
+label.autore=Autore:
+label.stanze=Stanze:
