aggiunta la possibilità di inserire nuovi admin.

--- a/galleria/src/main/resources/messages/messages_it.properties
+++ b/galleria/src/main/resources/messages/messages_it.properties
@@ -7,7 +7,7 @@ label.invalid.user=nome utente o password errati
 label.username=Username:
 label.password=Password:
 label.cognome=Cognome:
-label.email=email;
+label.email=email:
 label.nazionalita=Nazionalita':
 label.dataNascita=Anno di nascita:
 label.dataMorte=Anno di morte:
